Added a test for the create, build, analyze and destroy new api functionality.

--- a/code/site/src/main/resources/discarded/jaas.conf
+++ b/code/site/src/main/resources/discarded/jaas.conf
@@ -19,8 +19,8 @@ KrbClientPrincipal {
    com.sun.security.auth.module.Krb5LoginModule required 
    		storeKey="true" 
    		useKeyTab="true" 
-   		principal="u342223@POST.BPGNET.NET" 
-		keyTab="C:/winnt/jaas.krb"
+   		principal="user-defined-in-ad@commerzbank.de"
+		keyTab="/opt/path/to/ktab/jaas.krb"
 		doNotPrompt="true"
 		debug="true";
    
