Changed the geospatial database from DB2 to Oracle, including the configuration.

--- a/code/libs/src/main/resources/indexes/production/spring.properties
+++ b/code/libs/src/main/resources/indexes/production/spring.properties
@@ -1,16 +1,16 @@
 # The DB2 database credentials
-db2.jdbc.userid=ubuntu
-db2.jdbc.password=Caherl1ne
+db2.jdbc.userid=ikube
+db2.jdbc.password=password
 db2.jdbc.url=jdbc:db2://ikube.be:50000/ikube
 
 # The Oracle database credentials
-oracle.jdbc.userid=oracle
-oracle.jdbc.password=Caherl1ne
-oracle.jdbc.url=jdbc:oracle:thin:@//ikube.be:1521/XE
+oracle.jdbc.userid=ikube
+oracle.jdbc.password=password
+oracle.jdbc.url=jdbc:oracle:thin:@ikube.be:1521:bph
 
 # The Postgres database credentials
-postgres.jdbc.userid=postgres
-postgres.jdbc.password=Caherl1ne
+postgres.jdbc.userid=ikube
+postgres.jdbc.password=password
 postgres.jdbc.url=jdbc:postgresql://ikube.be:5432/ikube
 
 # The H geo database credentials
