--- a/code/tool/src/main/resources/log4j.properties
+++ b/code/tool/src/main/resources/log4j.properties
@@ -1,10 +1,10 @@
 # Root Logger
-log4j.rootLogger=WARN, console, file
-log4j.rootCategory=WARN, console
+log4j.rootLogger=DEBUG, console, file
+log4j.rootCategory=DEBUG, console
 
 # ikube application file logging
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.Threshold=WARN
+log4j.appender.file.Threshold=DEBUG
 log4j.appender.file.File=ikube/ikube.log
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p %C{1}.%M(%L) - %m%n
@@ -15,14 +15,14 @@ log4j.appender.file.MaxBackupIndex=4
 
 # ikube application console logging
 log4j.appender.console=org.apache.log4j.ConsoleAppender
-log4j.appender.console.Threshold=WARN
+log4j.appender.console.Threshold=DEBUG
 log4j.appender.console.ImmediateFlush=true
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p %C{1}.%M(%L) - %m%n
 
 # set the categories
-log4j.category.net=WARN
-log4j.category.com=WARN
-log4j.category.org=WARN
+log4j.category.net=INFO
+log4j.category.com=INFO
+log4j.category.org=INFO
 
 log4j.category.ikube=INFO
