--- a/code/tool/src/main/resources/deploy/spring.properties
+++ b/code/tool/src/main/resources/deploy/spring.properties
@@ -1,3 +1,8 @@
+#username=wid
+#password=password
+
+deploy-to-servers=server-development,server-production
+
 ikube-war=ikube.war
 site-war=site.war
 in-parallel=true
@@ -103,7 +108,7 @@ tomcat-fis-chmod=chmod 777 -R ${tomcat-fis}
 tomcat-fis-startup=${profile};cd ${tomcat-fis-bin};${startup}
 
 
-# The ip address of the FIS index server
+# The ip address of the development VM
 server-development-ip=192.168.1.28
 
 tomcat-name-development=apache-tomcat-7.0.42
