--- a/code/tool/pom.xml
+++ b/code/tool/pom.xml
@@ -17,6 +17,126 @@
         <main.class>ikube.Ikube</main.class>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>ikube</groupId>
+            <artifactId>ikube-core</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>sevenzip</groupId>
+            <artifactId>jbinding</artifactId>
+            <version>4.65.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>sevenzip</groupId>
+            <artifactId>jbinding-linux</artifactId>
+            <version>4.65.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>canyon</groupId>
+            <artifactId>canyon</artifactId>
+            <version>0.9.8</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.48</version>
+        </dependency>
+        <dependency>
+            <groupId>ant</groupId>
+            <artifactId>ant</artifactId>
+            <version>1.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.qpid</groupId>
+            <artifactId>qpid-client</artifactId>
+            <version>0.30</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-core</artifactId>
+            <version>5.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jms</artifactId>
+            <version>${spring-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ibm-mq</groupId>
+            <artifactId>mq</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>ibm-mq</groupId>
+            <artifactId>mq-jms</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>ibm-mq</groupId>
+            <artifactId>mq-core</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>ibm-orb</groupId>-->
+            <!--<artifactId>ibm-orb</artifactId>-->
+            <!--<version>1.0.0</version>-->
+        <!--</dependency>-->
+
+        <dependency>
+            <groupId>ibm</groupId>
+            <artifactId>ibm-thin-client</artifactId>
+            <version>8.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>ibm</groupId>
+            <artifactId>ibm-sibus</artifactId>
+            <version>8.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>ibm</groupId>
+            <artifactId>ibm-sibus-ext</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>ibm</groupId>
+            <artifactId>ibm-sibus-orb</artifactId>
+            <version>8.5.0</version>
+        </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>oracle</groupId>-->
+            <!--<artifactId>wlclient</artifactId>-->
+            <!--<version>1.0.0</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>oracle</groupId>-->
+            <!--<artifactId>wljmsclient</artifactId>-->
+            <!--<version>1.0.0</version>-->
+        <!--</dependency>-->
+
+        <dependency>
+            <groupId>oracle</groupId>
+            <artifactId>wlthint3client</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>7.0</version>
+        </dependency>
+
+    </dependencies>
+
     <build>
         <resources>
             <resource>
@@ -103,53 +223,5 @@
             </plugin>
         </plugins>
     </build>
-
-    <dependencies>
-        <dependency>
-            <groupId>ikube</groupId>
-            <artifactId>ikube-core</artifactId>
-            <version>${project.version}</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>sevenzip</groupId>
-            <artifactId>jbinding</artifactId>
-            <version>4.65.1</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>sevenzip</groupId>
-            <artifactId>jbinding-linux</artifactId>
-            <version>4.65.1</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>canyon</groupId>
-            <artifactId>canyon</artifactId>
-            <version>0.9.8</version>
-            <type>jar</type>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.jcraft</groupId>
-            <artifactId>jsch</artifactId>
-            <version>0.1.48</version>
-        </dependency>
-        <dependency>
-            <groupId>ant</groupId>
-            <artifactId>ant</artifactId>
-            <version>1.7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.qpid</groupId>
-            <artifactId>qpid-client</artifactId>
-            <version>0.30</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-core</artifactId>
-            <version>5.7.0</version>
-        </dependency>
-    </dependencies>
 
 </project>
