Adding some classes for database performance testing and updated some configurations.

--- a/code/libs/src/main/resources/indexes/production/spring.properties
+++ b/code/libs/src/main/resources/indexes/production/spring.properties
@@ -4,7 +4,7 @@ db2.jdbc.password=password
 db2.jdbc.url=jdbc:db2://ikube.be:50000/ikube
 
 # The Oracle database credentials
-oracle.jdbc.userid=ikube
+oracle.jdbc.userid=BPHADMIN
 oracle.jdbc.password=password
 oracle.jdbc.url=jdbc:oracle:thin:@ikube.be:1521:bph
 
