--- a/code/libs/src/main/resources/experimental/spring.properties
+++ b/code/libs/src/main/resources/experimental/spring.properties
@@ -14,7 +14,6 @@
 #database-port=1521
 #database-url=jdbc:oracle:thin:@localhost:${local-port}/BPH
 
-
 ###### For H2 database
 # Ssh tunnel details
 local-port=10000
@@ -28,8 +27,8 @@ remote-host-for-ssh-and-database=192.168.1.40
 # Database details
 database-userid=sa
 database-password=
-database-port=82
-database-url=jdbc:h2:tcp://localhost/~/ikube
+database-port=8043
+database-url=jdbc:h2:tcp://localhost:8043/mem:ikube
 
 
 # The H2 database credentials
@@ -39,8 +38,9 @@ h2.jdbc.driver=org.h2.Driver
 
 #h2.jdbc.url=jdbc:h2:mem:ikube
 #h2.jdbc.url=jdbc:h2:file:ikube/ikube;DB_CLOSE_ON_EXIT=FALSE
-h2.jdbc.url=jdbc:h2:tcp://localhost/~/ikube
+#h2.jdbc.url=jdbc:h2:tcp://localhost/~/ikube
 #h2.jdbc.url=jdbc:h2:tcp://192.168.1.10/ikube
+h2.jdbc.url=jdbc:h2:tcp://localhost:8043/mem:ikube
 
 # Database options
 #AUTO_SERVER_PORT=9090;
