Added a publisher to visualize the grid throughput.

--- a/code/libs/src/main/resources/experimental/spring.properties
+++ b/code/libs/src/main/resources/experimental/spring.properties
@@ -28,7 +28,7 @@ remote-host-for-ssh-and-database=localhost
 database-userid=sa
 database-password=
 database-port=8082
-database-url=jdbc:h2:tcp://localhost:8082/ikube
+database-url=jdbc:h2:tcp://localhost:8082/ikube;DB_CLOSE_ON_EXIT=FALSE
 
 
 # The H2 database credentials
@@ -40,7 +40,7 @@ h2.jdbc.driver=org.h2.Driver
 #h2.jdbc.url=jdbc:h2:file:ikube/ikube;DB_CLOSE_ON_EXIT=FALSE
 #h2.jdbc.url=jdbc:h2:tcp://localhost/~/ikube
 #h2.jdbc.url=jdbc:h2:tcp://192.168.1.10/ikube
-h2.jdbc.url=jdbc:h2:tcp://localhost:8082/ikube;DB_CLOSE_ON_EXIT=TRUE
+h2.jdbc.url=jdbc:h2:tcp://localhost:8082/ikube;DB_CLOSE_ON_EXIT=FALSE
 
 # Database options
 #AUTO_SERVER_PORT=9090;
