Re-factoring/development.

--- a/code/libs/src/main/resources/experimental/spring.properties
+++ b/code/libs/src/main/resources/experimental/spring.properties
@@ -1,36 +1,3 @@
-###### For Oracle database
-# Ssh tunnel details
-#local-port=10000
-#target-ssh-port=443
-#ssh-userid=michael
-#ssh-password=
-
-# Common details
-#remote-host-for-ssh-and-database=ikube.be
-
-# Database details
-#database-userid=BPHADMIN
-#database-password=password
-#database-port=1521
-#database-url=jdbc:oracle:thin:@localhost:${local-port}/BPH
-
-###### For H2 database
-# Ssh tunnel details
-local-port=10000
-target-ssh-port=22
-ssh-userid=laptop
-ssh-password=caherline
-
-# Common details
-remote-host-for-ssh-and-database=localhost
-
-# Database details
-database-userid=sa
-database-password=
-database-port=8082
-database-url=jdbc:h2:tcp://localhost:8082/ikube;DB_CLOSE_ON_EXIT=FALSE
-
-
 # The H2 database credentials
 h2.jdbc.userid=sa
 h2.jdbc.password=
@@ -74,3 +41,36 @@ ikube.jdbc.url=${h2.jdbc.url}
 ikube.jdbc.driver=${h2.jdbc.driver}
 ikube.jdbc.dictionary=h2(batchLimit=10000)
 ikube.dataBaseClass=ikube.database.DataBaseJpaH2
+
+###### For Oracle database
+# Ssh tunnel details
+#local-port=10000
+#target-ssh-port=443
+#ssh-userid=michael
+#ssh-password=
+
+# Common details
+#remote-host-for-ssh-and-database=ikube.be
+
+# Database details
+#database-userid=BPHADMIN
+#database-password=password
+#database-port=1521
+#database-url=jdbc:oracle:thin:@localhost:${local-port}/BPH
+
+###### For H2 database
+# Ssh tunnel details
+local-port=10000
+target-ssh-port=22
+ssh-userid=laptop
+ssh-password=caherline
+
+# Common details
+remote-host-for-ssh-and-database=localhost
+
+# Database details
+database-userid=sa
+database-password=
+database-port=8082
+database-url=${h2.jdbc.url}
+
