--- a/pom.xml
+++ b/pom.xml
@@ -45,12 +45,12 @@
     <modules>
         <module>code/com</module>
         <module>code/core</module>
-        <module>code/war</module>
-        <module>code/libs</module>
-        <module>code/site</module>
-        <module>code/web</module>
-        <module>code/tool</module>
-        <module>code/patch</module>
+        <!--<module>code/war</module>-->
+        <!--<module>code/libs</module>-->
+        <!--<module>code/site</module>-->
+        <!--<module>code/web</module>-->
+        <!--<module>code/tool</module>-->
+        <!--<module>code/patch</module>-->
     </modules>
 
     <properties>
@@ -175,7 +175,7 @@
                                     <copy todir="ikube/indexes/twitter">
                                         <fileset dir="../libs/src/main/resources/indexes/twitter" includes="**"/>
                                     </copy>
-                                    <copy todir=".">
+                                    <copy todir="experimental">
                                         <fileset dir="../libs/src/main/resources/experimental" includes="**"/>
                                     </copy>
                                 </target>
