--- a/code/tool/pom.xml
+++ b/code/tool/pom.xml
@@ -135,6 +135,19 @@
             <version>7.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-client</artifactId>
+            <version>2.3.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-multipart</artifactId>
+            <version>2.3.1</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
