--- a/code/tool/pom.xml
+++ b/code/tool/pom.xml
@@ -167,39 +167,39 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-antrun-plugin</artifactId>
             </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.2.1</version>
-                <executions>
-                    <execution>
-                        <phase>site-deploy</phase>
-                        <configuration>
-                            <mainClass>ikube.deploy.Deployer</mainClass>
-                            <arguments>
-                                <!-- The number of directories to go up for the dot folder -->
-                                <argument>.</argument>
-                                <!-- The name of the configuration file for the deployment servers -->
-                                <argument>deployer.xml</argument>
-                                <!-- Whether to execute the main class, i.e. do the deployment -->
-                                <argument>true</argument>
-                                <!-- Don't know -->
-                                <argument>-classpath</argument>
-                            </arguments>
-                            <!--<workingDirectory>../</workingDirectory>-->
-                            <keepAlive>false</keepAlive>
-                            <cleanupDaemonThreads>true</cleanupDaemonThreads>
-                            <daemonThreadJoinTimeout>60000</daemonThreadJoinTimeout>
-                            <includePluginDependencies>true</includePluginDependencies>
-                            <includeProjectDependencies>true</includeProjectDependencies>
-                            <stopUnresponsiveDaemonThreads>true</stopUnresponsiveDaemonThreads>
-                        </configuration>
-                        <goals>
-                            <goal>java</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>org.codehaus.mojo</groupId>-->
+                <!--<artifactId>exec-maven-plugin</artifactId>-->
+                <!--<version>1.2.1</version>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<phase>site-deploy</phase>-->
+                        <!--<configuration>-->
+                            <!--<mainClass>ikube.deploy.Deployer</mainClass>-->
+                            <!--<arguments>-->
+                                <!--&lt;!&ndash; The number of directories to go up for the dot folder &ndash;&gt;-->
+                                <!--<argument>.</argument>-->
+                                <!--&lt;!&ndash; The name of the configuration file for the deployment servers &ndash;&gt;-->
+                                <!--<argument>deployer.xml</argument>-->
+                                <!--&lt;!&ndash; Whether to execute the main class, i.e. do the deployment &ndash;&gt;-->
+                                <!--<argument>true</argument>-->
+                                <!--&lt;!&ndash; Don't know &ndash;&gt;-->
+                                <!--<argument>-classpath</argument>-->
+                            <!--</arguments>-->
+                            <!--&lt;!&ndash;<workingDirectory>../</workingDirectory>&ndash;&gt;-->
+                            <!--<keepAlive>false</keepAlive>-->
+                            <!--<cleanupDaemonThreads>true</cleanupDaemonThreads>-->
+                            <!--<daemonThreadJoinTimeout>60000</daemonThreadJoinTimeout>-->
+                            <!--<includePluginDependencies>true</includePluginDependencies>-->
+                            <!--<includeProjectDependencies>true</includeProjectDependencies>-->
+                            <!--<stopUnresponsiveDaemonThreads>true</stopUnresponsiveDaemonThreads>-->
+                        <!--</configuration>-->
+                        <!--<goals>-->
+                            <!--<goal>java</goal>-->
+                        <!--</goals>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
