--- a/code/libs/pom.xml
+++ b/code/libs/pom.xml
@@ -1007,40 +1007,6 @@
                     <!--</execution>-->
 
                     <!--<execution>-->
-                        <!--<id>neuroph-adapters</id>-->
-                        <!--<goals>-->
-                            <!--<goal>deploy-file</goal>-->
-                        <!--</goals>-->
-                        <!--<phase>${phase}</phase>-->
-                        <!--<configuration>-->
-                            <!--<groupId>org.neuroph</groupId>-->
-                            <!--<artifactId>neuroph-adapters</artifactId>-->
-                            <!--<version>2.92</version>-->
-                            <!--<file>tools/analytics/neuroph-adapters-2.92.jar</file>-->
-                            <!--<packaging>${packaging}</packaging>-->
-                            <!--<generatePom>${generate-pom}</generatePom>-->
-                            <!--<repositoryId>${repository-id}</repositoryId>-->
-                            <!--<url>${artifactory}</url>-->
-                        <!--</configuration>-->
-                    <!--</execution>-->
-                    <!--<execution>-->
-                        <!--<id>neuroph-contrib</id>-->
-                        <!--<goals>-->
-                            <!--<goal>deploy-file</goal>-->
-                        <!--</goals>-->
-                        <!--<phase>${phase}</phase>-->
-                        <!--<configuration>-->
-                            <!--<groupId>org.neuroph</groupId>-->
-                            <!--<artifactId>neuroph-contrib</artifactId>-->
-                            <!--<version>2.92</version>-->
-                            <!--<file>tools/analytics/neuroph-contrib-2.92.jar</file>-->
-                            <!--<packaging>${packaging}</packaging>-->
-                            <!--<generatePom>${generate-pom}</generatePom>-->
-                            <!--<repositoryId>${repository-id}</repositoryId>-->
-                            <!--<url>${artifactory}</url>-->
-                        <!--</configuration>-->
-                    <!--</execution>-->
-                    <!--<execution>-->
                         <!--<id>neuroph-core</id>-->
                         <!--<goals>-->
                             <!--<goal>deploy-file</goal>-->
@@ -1049,59 +1015,8 @@
                         <!--<configuration>-->
                             <!--<groupId>org.neuroph</groupId>-->
                             <!--<artifactId>neuroph-core</artifactId>-->
-                            <!--<version>2.92</version>-->
-                            <!--<file>tools/analytics/neuroph-core-2.92.jar</file>-->
-                            <!--<packaging>${packaging}</packaging>-->
-                            <!--<generatePom>${generate-pom}</generatePom>-->
-                            <!--<repositoryId>${repository-id}</repositoryId>-->
-                            <!--<url>${artifactory}</url>-->
-                        <!--</configuration>-->
-                    <!--</execution>-->
-                    <!--<execution>-->
-                        <!--<id>neuroph-imgrec</id>-->
-                        <!--<goals>-->
-                            <!--<goal>deploy-file</goal>-->
-                        <!--</goals>-->
-                        <!--<phase>${phase}</phase>-->
-                        <!--<configuration>-->
-                            <!--<groupId>org.neuroph</groupId>-->
-                            <!--<artifactId>neuroph-imgrec</artifactId>-->
-                            <!--<version>2.92</version>-->
-                            <!--<file>tools/analytics/neuroph-imgrec-2.92.jar</file>-->
-                            <!--<packaging>${packaging}</packaging>-->
-                            <!--<generatePom>${generate-pom}</generatePom>-->
-                            <!--<repositoryId>${repository-id}</repositoryId>-->
-                            <!--<url>${artifactory}</url>-->
-                        <!--</configuration>-->
-                    <!--</execution>-->
-                    <!--<execution>-->
-                        <!--<id>neuroph-ocr</id>-->
-                        <!--<goals>-->
-                            <!--<goal>deploy-file</goal>-->
-                        <!--</goals>-->
-                        <!--<phase>${phase}</phase>-->
-                        <!--<configuration>-->
-                            <!--<groupId>org.neuroph</groupId>-->
-                            <!--<artifactId>neuroph-ocr</artifactId>-->
-                            <!--<version>2.92</version>-->
-                            <!--<file>tools/analytics/neuroph-ocr-2.92.jar</file>-->
-                            <!--<packaging>${packaging}</packaging>-->
-                            <!--<generatePom>${generate-pom}</generatePom>-->
-                            <!--<repositoryId>${repository-id}</repositoryId>-->
-                            <!--<url>${artifactory}</url>-->
-                        <!--</configuration>-->
-                    <!--</execution>-->
-                    <!--<execution>-->
-                        <!--<id>neuroph-samples</id>-->
-                        <!--<goals>-->
-                            <!--<goal>deploy-file</goal>-->
-                        <!--</goals>-->
-                        <!--<phase>${phase}</phase>-->
-                        <!--<configuration>-->
-                            <!--<groupId>org.neuroph</groupId>-->
-                            <!--<artifactId>neuroph-samples</artifactId>-->
-                            <!--<version>2.92</version>-->
-                            <!--<file>tools/analytics/neuroph-samples-2.92.jar</file>-->
+                            <!--<version>2.9</version>-->
+                            <!--<file>tools/analytics/neuroph-core-2.9.jar</file>-->
                             <!--<packaging>${packaging}</packaging>-->
                             <!--<generatePom>${generate-pom}</generatePom>-->
                             <!--<repositoryId>${repository-id}</repositoryId>-->
@@ -1109,108 +1024,108 @@
                         <!--</configuration>-->
                     <!--</execution>-->
 
-                    <execution>
-                        <id>neuroph-adapters-sources</id>
-                        <goals>
-                            <goal>deploy-file</goal>
-                        </goals>
-                        <phase>${phase}</phase>
-                        <configuration>
-                            <groupId>org.neuroph</groupId>
-                            <artifactId>neuroph-adapters-sources</artifactId>
-                            <version>2.92</version>
-                            <file>tools/analytics/neuroph-adapters-2.92-sources.jar</file>
-                            <packaging>${packaging}</packaging>
-                            <generatePom>${dont-generate-pom}</generatePom>
-                            <repositoryId>${repository-id}</repositoryId>
-                            <url>${artifactory}</url>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>neuroph-contrib-sources</id>
-                        <goals>
-                            <goal>deploy-file</goal>
-                        </goals>
-                        <phase>${phase}</phase>
-                        <configuration>
-                            <groupId>org.neuroph</groupId>
-                            <artifactId>neuroph-contrib-sources</artifactId>
-                            <version>2.92</version>
-                            <file>tools/analytics/neuroph-contrib-2.92-sources.jar</file>
-                            <packaging>${packaging}</packaging>
-                            <generatePom>${dont-generate-pom}</generatePom>
-                            <repositoryId>${repository-id}</repositoryId>
-                            <url>${artifactory}</url>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>neuroph-core-sources</id>
-                        <goals>
-                            <goal>deploy-file</goal>
-                        </goals>
-                        <phase>${phase}</phase>
-                        <configuration>
-                            <groupId>org.neuroph</groupId>
-                            <artifactId>neuroph-core-sources</artifactId>
-                            <version>2.92</version>
-                            <file>tools/analytics/neuroph-core-2.92-sources.jar</file>
-                            <packaging>${packaging}</packaging>
-                            <generatePom>${dont-generate-pom}</generatePom>
-                            <repositoryId>${repository-id}</repositoryId>
-                            <url>${artifactory}</url>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>neuroph-imgrec-sources</id>
-                        <goals>
-                            <goal>deploy-file</goal>
-                        </goals>
-                        <phase>${phase}</phase>
-                        <configuration>
-                            <groupId>org.neuroph</groupId>
-                            <artifactId>neuroph-imgrec-sources</artifactId>
-                            <version>2.92</version>
-                            <file>tools/analytics/neuroph-imgrec-2.92-sources.jar</file>
-                            <packaging>${packaging}</packaging>
-                            <generatePom>${dont-generate-pom}</generatePom>
-                            <repositoryId>${repository-id}</repositoryId>
-                            <url>${artifactory}</url>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>neuroph-ocr-sources</id>
-                        <goals>
-                            <goal>deploy-file</goal>
-                        </goals>
-                        <phase>${phase}</phase>
-                        <configuration>
-                            <groupId>org.neuroph</groupId>
-                            <artifactId>neuroph-ocr-sources</artifactId>
-                            <version>2.92</version>
-                            <file>tools/analytics/neuroph-ocr-2.92-sources.jar</file>
-                            <packaging>${packaging}</packaging>
-                            <generatePom>${dont-generate-pom}</generatePom>
-                            <repositoryId>${repository-id}</repositoryId>
-                            <url>${artifactory}</url>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>neuroph-samples-sources</id>
-                        <goals>
-                            <goal>deploy-file</goal>
-                        </goals>
-                        <phase>${phase}</phase>
-                        <configuration>
-                            <groupId>org.neuroph</groupId>
-                            <artifactId>neuroph-samples-sources</artifactId>
-                            <version>2.92</version>
-                            <file>tools/analytics/neuroph-samples-2.92-sources.jar</file>
-                            <packaging>${packaging}</packaging>
-                            <generatePom>${dont-generate-pom}</generatePom>
-                            <repositoryId>${repository-id}</repositoryId>
-                            <url>${artifactory}</url>
-                        </configuration>
-                    </execution>
+                    <!--<execution>-->
+                        <!--<id>neuroph-adapters-sources</id>-->
+                        <!--<goals>-->
+                            <!--<goal>deploy-file</goal>-->
+                        <!--</goals>-->
+                        <!--<phase>${phase}</phase>-->
+                        <!--<configuration>-->
+                            <!--<groupId>org.neuroph</groupId>-->
+                            <!--<artifactId>neuroph-adapters-sources</artifactId>-->
+                            <!--<version>2.92</version>-->
+                            <!--<file>tools/analytics/neuroph-adapters-2.92-sources.jar</file>-->
+                            <!--<packaging>${packaging}</packaging>-->
+                            <!--<generatePom>${dont-generate-pom}</generatePom>-->
+                            <!--<repositoryId>${repository-id}</repositoryId>-->
+                            <!--<url>${artifactory}</url>-->
+                        <!--</configuration>-->
+                    <!--</execution>-->
+                    <!--<execution>-->
+                        <!--<id>neuroph-contrib-sources</id>-->
+                        <!--<goals>-->
+                            <!--<goal>deploy-file</goal>-->
+                        <!--</goals>-->
+                        <!--<phase>${phase}</phase>-->
+                        <!--<configuration>-->
+                            <!--<groupId>org.neuroph</groupId>-->
+                            <!--<artifactId>neuroph-contrib-sources</artifactId>-->
+                            <!--<version>2.92</version>-->
+                            <!--<file>tools/analytics/neuroph-contrib-2.92-sources.jar</file>-->
+                            <!--<packaging>${packaging}</packaging>-->
+                            <!--<generatePom>${dont-generate-pom}</generatePom>-->
+                            <!--<repositoryId>${repository-id}</repositoryId>-->
+                            <!--<url>${artifactory}</url>-->
+                        <!--</configuration>-->
+                    <!--</execution>-->
+                    <!--<execution>-->
+                        <!--<id>neuroph-core-sources</id>-->
+                        <!--<goals>-->
+                            <!--<goal>deploy-file</goal>-->
+                        <!--</goals>-->
+                        <!--<phase>${phase}</phase>-->
+                        <!--<configuration>-->
+                            <!--<groupId>org.neuroph</groupId>-->
+                            <!--<artifactId>neuroph-core-sources</artifactId>-->
+                            <!--<version>2.92</version>-->
+                            <!--<file>tools/analytics/neuroph-core-2.92-sources.jar</file>-->
+                            <!--<packaging>${packaging}</packaging>-->
+                            <!--<generatePom>${dont-generate-pom}</generatePom>-->
+                            <!--<repositoryId>${repository-id}</repositoryId>-->
+                            <!--<url>${artifactory}</url>-->
+                        <!--</configuration>-->
+                    <!--</execution>-->
+                    <!--<execution>-->
+                        <!--<id>neuroph-imgrec-sources</id>-->
+                        <!--<goals>-->
+                            <!--<goal>deploy-file</goal>-->
+                        <!--</goals>-->
+                        <!--<phase>${phase}</phase>-->
+                        <!--<configuration>-->
+                            <!--<groupId>org.neuroph</groupId>-->
+                            <!--<artifactId>neuroph-imgrec-sources</artifactId>-->
+                            <!--<version>2.92</version>-->
+                            <!--<file>tools/analytics/neuroph-imgrec-2.92-sources.jar</file>-->
+                            <!--<packaging>${packaging}</packaging>-->
+                            <!--<generatePom>${dont-generate-pom}</generatePom>-->
+                            <!--<repositoryId>${repository-id}</repositoryId>-->
+                            <!--<url>${artifactory}</url>-->
+                        <!--</configuration>-->
+                    <!--</execution>-->
+                    <!--<execution>-->
+                        <!--<id>neuroph-ocr-sources</id>-->
+                        <!--<goals>-->
+                            <!--<goal>deploy-file</goal>-->
+                        <!--</goals>-->
+                        <!--<phase>${phase}</phase>-->
+                        <!--<configuration>-->
+                            <!--<groupId>org.neuroph</groupId>-->
+                            <!--<artifactId>neuroph-ocr-sources</artifactId>-->
+                            <!--<version>2.92</version>-->
+                            <!--<file>tools/analytics/neuroph-ocr-2.92-sources.jar</file>-->
+                            <!--<packaging>${packaging}</packaging>-->
+                            <!--<generatePom>${dont-generate-pom}</generatePom>-->
+                            <!--<repositoryId>${repository-id}</repositoryId>-->
+                            <!--<url>${artifactory}</url>-->
+                        <!--</configuration>-->
+                    <!--</execution>-->
+                    <!--<execution>-->
+                        <!--<id>neuroph-samples-sources</id>-->
+                        <!--<goals>-->
+                            <!--<goal>deploy-file</goal>-->
+                        <!--</goals>-->
+                        <!--<phase>${phase}</phase>-->
+                        <!--<configuration>-->
+                            <!--<groupId>org.neuroph</groupId>-->
+                            <!--<artifactId>neuroph-samples-sources</artifactId>-->
+                            <!--<version>2.92</version>-->
+                            <!--<file>tools/analytics/neuroph-samples-2.92-sources.jar</file>-->
+                            <!--<packaging>${packaging}</packaging>-->
+                            <!--<generatePom>${dont-generate-pom}</generatePom>-->
+                            <!--<repositoryId>${repository-id}</repositoryId>-->
+                            <!--<url>${artifactory}</url>-->
+                        <!--</configuration>-->
+                    <!--</execution>-->
 
                 </executions>
             </plugin>
