Added some logic to test the posting of messages to the Nedbank project.

--- a/code/libs/src/main/resources/indexes/fis/spring.properties
+++ b/code/libs/src/main/resources/indexes/fis/spring.properties
@@ -1,3 +1,2 @@
 fis-max-read-length=10000000
-
-fis-excluded-files=.*(.svn).*|.*(.db).*|.*(.exe).*|.*(.dll).*|.*(pwds).*|.*(password).*|.*(RSA).*|.*(MANIFEST).*|.*(/root).*|.*(/proc).*|.*(/bin).*|.*(/boot).*|.*(/sbin).*|.*(/sys).*|.*(backup).*|.*(/sys).*|.*(/media).*|.*(/mnt).*|.*(/dev).*|.*(/lib).*|.*(/run).*|.*(/etc).*|.*(.plugins).*|.*(autofs).*|.*(.class).*|.*(static-data-in).*|.*(svn-base).*
+fis-excluded-files=.*(.svn).*|.*(.db).*|.*(.exe).*|.*(.dll).*|.*(pwds).*|.*(password).*|.*(RSA).*|.*(MANIFEST).*|.*(/root).*|.*(/proc).*|.*(/bin).*|.*(/boot).*|.*(/sbin).*|.*(/sys).*|.*(backup).*|.*(/sys).*|.*(/media).*|.*(/mnt).*|.*(/dev).*|.*(/lib).*|.*(/run).*|.*(/etc).*|.*(.plugins).*|.*(autofs).*|.*(.class).*|.*(static-data-in).*|.*(svn-base).*|.*(.jar).*
