Updating the geo-spatial for the Google Maps key requirement.

--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -12,7 +12,7 @@ merge.factor=10
 buffered.docs=10
 max.field.length=1000
 max.read.length=10000000
-index.root=/tmp
+index.root=/home
 index.directory.path=${index.root}/indexes
 index.directory.path.backup=${index.directory.path}
 jdbc.batch.size=10000
